# theater

./: '  .gitignore  2026-03-14-the-sky-is-blue.txt  ;  BUILD_DOCS.md  CHANGELOG.md  CLAUDE.md  CONVERSION_STATUS.md  Cargo.toml  HANDLER_INTEGRATION_GUIDE.md  HANDLER_MIGRATION.md  HANDLER_MIGRATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MESSAGING_IMPLEMENTATION_PLAN.md  PROCESS_HANDLER_ANALYSIS.md  README.md  SUCCESS.md  VARIABLE_SUBSTITUTION_GUIDE.md  build-result.txt  cli-README.md  config.toml  convert_events.py  convert_handler_events.sh  doc.md  environment-test-chain.json  final_convert.py  fix_theater_git.sh  flake.nix  index.html  index.toml  latest-replay.json  note.md  notes.md  prompt.md  random-chain.json  result  simple_startup_concept.rs  startup_refactor_concept.rs  test  thinking.md  (+2 more)
crates/simple-theater/: Cargo.toml
crates/simple-theater/src/: lib.rs  simple_handler_wrapper.rs
crates/theater/: .gitignore  CLAUDE.md  Cargo.toml  MIGRATION_GUIDE.md  QUICK_WINS.md  README.md  REFACTORING_ANALYSIS.md  REFACTORING_SUMMARY.md  STATE_MACHINE_VISUAL.md  flake.nix  todo.md
crates/theater-chain/: Cargo.toml
crates/theater-chain-format/: Cargo.toml
crates/theater-chain-format/src/: lib.rs
crates/theater-chain/src/: chain.rs  chain_event.rs  event.rs  lib.rs
crates/theater-cli/: Cargo.toml  README.md  test_completion.sh
crates/theater-cli/changes/: README.md  command-restructure-cr-002.md  modernization-cr-001.md
crates/theater-cli/completions/: README.md  theater.bash  theater.fish  theater.zsh
crates/theater-cli/src/: client.rs  config.rs  error.rs  lib.rs  main.rs
crates/theater-cli/templates/: README.md
crates/theater-client/: Cargo.toml  README.md
crates/theater-client/src/: lib.rs  tcp.rs
crates/theater-handler-assembler/: Cargo.toml
crates/theater-handler-assembler/src/: lib.rs
crates/theater-handler-assembler/wit/: world.wit
crates/theater-handler-environment/: Cargo.toml  README.md
crates/theater-handler-environment/src/: events.rs  lib.rs
crates/theater-handler-environment/wit/: world.wit
crates/theater-handler-http/: Cargo.toml  README.md
crates/theater-handler-http-framework/: Cargo.toml
crates/theater-handler-http-framework/src/: lib.rs  server_instance.rs  tls.rs  types.rs
crates/theater-handler-http/src/: bindings.rs  events.rs  host_impl.rs  incoming.rs  lib.rs  replay.rs  server.rs  types.rs
crates/theater-handler-io/: Cargo.toml
crates/theater-handler-io/src/: error.rs  events.rs  host_impl.rs  lib.rs  poll.rs
crates/theater-handler-io/tests/: integration_test.rs
crates/theater-handler-loop/: Cargo.toml  loop.pact
crates/theater-handler-loop/src/: lib.rs
crates/theater-handler-message-server/: Cargo.toml  MIGRATION.md  README.md
crates/theater-handler-message-server/src/: events.rs  lib.rs  lib.rs.backup
crates/theater-handler-message-server/wit/: world.wit
crates/theater-handler-podman/: Cargo.toml  podman.pact
crates/theater-handler-podman/src/: lib.rs
crates/theater-handler-process/: Cargo.toml  README.md
crates/theater-handler-process/src/: events.rs  lib.rs
crates/theater-handler-replay/: Cargo.toml
crates/theater-handler-replay/src/: lib.rs
crates/theater-handler-replay/tests/: integration_test.rs
crates/theater-handler-rpc/: Cargo.toml  rpc.pact
crates/theater-handler-rpc/src/: lib.rs
crates/theater-handler-rpc/tests/: rpc_integration.rs
crates/theater-handler-runtime/: Cargo.toml  README.md  runtime.pact
crates/theater-handler-runtime/src/: lib.rs
crates/theater-handler-runtime/tests/: integration_test.rs
crates/theater-handler-runtime/wit/: world.wit
crates/theater-handler-store/: Cargo.toml  README.md  store.pact
crates/theater-handler-store/src/: events.rs  lib.rs
crates/theater-handler-store/wit/: world.wit
crates/theater-handler-supervisor/: Cargo.toml  README.md  supervisor.pact
crates/theater-handler-supervisor/src/: events.rs  lib.rs
crates/theater-handler-supervisor/wit/: world.wit
crates/theater-handler-tcp/: Cargo.toml  tcp.pact
crates/theater-handler-tcp/src/: lib.rs  stream.rs  tls.rs
crates/theater-handler-tcp/tests/: close_notify_test.rs  tcp_echo_integration.rs
crates/theater-handler-tcp/wit/: world.wit
crates/theater-handler-terminal/: Cargo.toml  terminal.pact
crates/theater-handler-terminal/src/: lib.rs
crates/theater-handler-timer/: Cargo.toml
crates/theater-handler-timer/src/: lib.rs
crates/theater-handler-timing/: Cargo.toml  README.md
crates/theater-handler-timing/src/: bindings.rs  events.rs  host_impl.rs  lib.rs
crates/theater-handler-timing/wit/: world.wit
crates/theater-replay-experimenting/: Cargo.toml
crates/theater-replay-experimenting/src/: main.rs
crates/theater-server/: Cargo.toml  README.md  SERVER_MIGRATION_STATUS.md
crates/theater-server-cli/: Cargo.toml  README.md
crates/theater-server-cli/src/: args.rs  main.rs  server.rs
crates/theater-server/src/: fragmenting_codec.rs  lib.rs  server.rs
crates/theater-tests/: Cargo.toml
crates/theater-tests/examples/: full-runtime.rs
crates/theater-tests/src/: lib.rs
crates/theater-tests/tests/: close_notify_repro_test.rs  handler_shutdown_tests.rs  shutdown_timing_test.rs
crates/theater/book/: book.toml
crates/theater/changes/: in-progress.md
crates/theater/examples/: README.md  environment-example-manifest.toml  full-runtime.rs  monitor_actor.rs  run_actor.rs  rwlock_chain_test.rs
crates/theater/src/: composite_bridge.rs  config.rs  errors.rs  fragmenting_codec.rs  id.rs  interceptor.rs  lib.rs  logging.rs  messages.rs  metrics.rs  pack_bridge.rs  shutdown.rs  theater_runtime.rs  wasm.rs
crates/theater/tests/: composite_integration_test.rs  contract_enforcement_test.rs  fragmenting_codec_test.rs  golden_chain_test.rs  mod.rs  multi_handler_integration_test.rs  pact_contract_test.rs  self_contained_replay_test.rs  shutdown_timing_test.rs  task_manager_test.rs
crates/theater/wit/: actor.wit  filesystem.wit  global.wit  http.wit  message-server.wit  process.wit  random.wit  runtime.wit  store.wit  (+7 more)
crates/val-serde/: Cargo.toml
(+1792 files in other folders)
