[workspace]
members = [
    "crates/theater",
    "crates/theater-cli",
    "crates/theater-server",
    "crates/theater-server-cli",
    "crates/theater-client",
    "crates/theater-handler-environment",
    "crates/theater-handler-filesystem",
    "crates/theater-handler-http",
    "crates/theater-handler-http-client",
    "crates/theater-handler-http-framework",
    "crates/theater-handler-io",
    "crates/theater-handler-message-server",
    "crates/theater-handler-process",
    "crates/theater-handler-random",
    "crates/theater-handler-runtime",
    "crates/theater-handler-sockets",
    "crates/theater-handler-store",
    "crates/theater-handler-supervisor",
    "crates/theater-handler-timing",
    "examples/type-safe-events",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
authors = ["Colin Rozzi <colinrozzi+theater@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/colinrozzi/theater"
homepage = "https://colinrozzi.github.io/theater"
keywords = ["wasm", "actor", "ai", "agents", "webassembly"]
categories = ["wasm", "concurrency", "development-tools"]
rust-version = "1.81.0"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }

theater = { version = "0.2.1", path = "crates/theater" }
theater-client = { version = "0.2.1", path = "crates/theater-client" }
theater-server = { version = "0.2.1", path = "crates/theater-server" }
theater-handler-environment = { version = "0.2.1", path = "crates/theater-handler-environment" }
theater-handler-filesystem = { version = "0.2.1", path = "crates/theater-handler-filesystem" }
theater-handler-http = { version = "0.2.1", path = "crates/theater-handler-http" }
theater-handler-http-client = { version = "0.2.1", path = "crates/theater-handler-http-client" }
theater-handler-http-framework = { version = "0.2.1", path = "crates/theater-handler-http-framework" }
theater-handler-io = { version = "0.2.1", path = "crates/theater-handler-io" }
theater-handler-message-server = { version = "0.2.1", path = "crates/theater-handler-message-server" }
theater-handler-process = { version = "0.2.1", path = "crates/theater-handler-process" }
theater-handler-random = { version = "0.2.1", path = "crates/theater-handler-random" }
theater-handler-runtime = { version = "0.2.1", path = "crates/theater-handler-runtime" }
theater-handler-sockets = { version = "0.2.1", path = "crates/theater-handler-sockets" }
theater-handler-store = { version = "0.2.1", path = "crates/theater-handler-store" }
theater-handler-supervisor = { version = "0.2.1", path = "crates/theater-handler-supervisor" }
theater-handler-timing = { version = "0.2.1", path = "crates/theater-handler-timing" }
