[workspace]
members = [
    "crates/theater",
    "crates/theater-cli",
    "crates/theater-server",
    "crates/theater-server-cli",
    "crates/theater-client",
    "crates/theater-chain",
    # Theater-specific handlers (to be migrated to Composite)
    "crates/theater-handler-message-server",
    "crates/theater-handler-runtime",
    "crates/theater-handler-store",
    "crates/theater-handler-supervisor",
    "crates/theater-handler-tcp",
    "crates/theater-replay-experimenting",
]
# DEPRECATED: WASI handlers moved to crates/deprecated/
# These use wasmtime Component Model and will be redesigned for Composite later
# - theater-handler-environment
# - theater-handler-filesystem
# - theater-handler-http
# - theater-handler-http-client
# - theater-handler-http-framework
# - theater-handler-io
# - theater-handler-process
# - theater-handler-random
# - theater-handler-sockets
# - theater-handler-timing
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
authors = ["Colin Rozzi <colinrozzi+theater@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/colinrozzi/theater"
homepage = "https://colinrozzi.github.io/theater"
keywords = ["wasm", "actor", "ai", "agents", "webassembly"]
categories = ["wasm", "concurrency", "development-tools"]
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }

theater = { version = "0.2.1", path = "crates/theater" }
theater-client = { version = "0.2.1", path = "crates/theater-client" }
theater-server = { version = "0.2.1", path = "crates/theater-server" }
# Theater-specific handlers
theater-handler-message-server = { version = "0.2.1", path = "crates/theater-handler-message-server" }
theater-handler-runtime = { version = "0.2.1", path = "crates/theater-handler-runtime" }
theater-handler-store = { version = "0.2.1", path = "crates/theater-handler-store" }
theater-handler-supervisor = { version = "0.2.1", path = "crates/theater-handler-supervisor" }
theater-handler-tcp = { version = "0.2.1", path = "crates/theater-handler-tcp" }
# DEPRECATED: WASI handlers (moved to crates/deprecated/)
# theater-handler-environment = { version = "0.2.1", path = "crates/deprecated/theater-handler-environment" }
# theater-handler-filesystem = { version = "0.2.1", path = "crates/deprecated/theater-handler-filesystem" }
# theater-handler-http = { version = "0.2.1", path = "crates/deprecated/theater-handler-http" }
# theater-handler-http-client = { version = "0.2.1", path = "crates/deprecated/theater-handler-http-client" }
# theater-handler-http-framework = { version = "0.2.1", path = "crates/deprecated/theater-handler-http-framework" }
# theater-handler-io = { version = "0.2.1", path = "crates/deprecated/theater-handler-io" }
# theater-handler-process = { version = "0.2.1", path = "crates/deprecated/theater-handler-process" }
# theater-handler-random = { version = "0.2.1", path = "crates/deprecated/theater-handler-random" }
# theater-handler-sockets = { version = "0.2.1", path = "crates/deprecated/theater-handler-sockets" }
# theater-handler-timing = { version = "0.2.1", path = "crates/deprecated/theater-handler-timing" }

# Pack runtime integration (Graph ABI-based WASM runtime)
pack = { path = "../pack" }
pack-abi = { path = "../pack/crates/pack-abi" }

# Metadata for Nix crane builds
[workspace.metadata.crane]
name = "theater"
