[workspace]
members = [
    "crates/theater",
    "crates/theater-cli",
    "crates/theater-server",
    "crates/theater-server-cli",
    "crates/theater-client",
    "crates/theater-chain",
    "crates/theater-chain-format",
    # Theater-specific handlers (to be migrated to Composite)
    "crates/theater-handler-message-server",
    "crates/theater-handler-runtime",
    "crates/theater-handler-store",
    "crates/theater-handler-supervisor",
    "crates/theater-handler-tcp",
    "crates/theater-handler-terminal",
    "crates/theater-handler-timer",
    "crates/theater-handler-assembler",
    "crates/theater-handler-rpc",
    "crates/theater-handler-loop",
    "crates/theater-handler-podman",
    "crates/theater-replay-experimenting",
    "crates/theater-tests",
]
exclude = [
    "crates/theater-handler-tcp/examples/tcp-echo",
    "crates/theater-cli/templates/*",
]
# DEPRECATED: WASI handlers moved to crates/deprecated/
# These use wasmtime Component Model and will be redesigned for Composite later
# - theater-handler-environment
# - theater-handler-filesystem
# - theater-handler-http
# - theater-handler-http-client
# - theater-handler-http-framework
# - theater-handler-io
# - theater-handler-process
# - theater-handler-random
# - theater-handler-sockets
# - theater-handler-timing
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Colin Rozzi <colinrozzi+theater@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/colinrozzi/theater"
homepage = "https://colinrozzi.github.io/theater"
keywords = ["wasm", "actor", "ai", "agents", "webassembly"]
categories = ["wasm", "concurrency", "development-tools"]
rust-version = "1.86.0"

[workspace.dependencies]
anyhow = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.13" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Workspace dep versions track each crate's current local version so
# `cargo publish` resolves to the version being released, not whatever
# permissive range "0.3" happens to find on crates.io. (Without this,
# `cargo publish -p X` verify-builds against a stale dep from the index
# and fails on APIs added in the unreleased local source.)
theater-chain = { version = "0.3.11", path = "crates/theater-chain" }
theater = { version = "0.3.25", path = "crates/theater" }
theater-client = { version = "0.3.10", path = "crates/theater-client" }
theater-server = { version = "0.3.14", path = "crates/theater-server" }
# Theater-specific handlers
theater-handler-message-server = { version = "0.3.11", path = "crates/theater-handler-message-server" }
theater-handler-runtime = { version = "0.3.13", path = "crates/theater-handler-runtime" }
theater-handler-store = { version = "0.3.11", path = "crates/theater-handler-store" }
theater-handler-supervisor = { version = "0.3.16", path = "crates/theater-handler-supervisor" }
theater-handler-tcp = { version = "0.3.20", path = "crates/theater-handler-tcp" }
theater-handler-terminal = { version = "0.3.11", path = "crates/theater-handler-terminal" }
theater-handler-timer = { version = "0.3.13", path = "crates/theater-handler-timer" }
theater-handler-assembler = { version = "0.3.11", path = "crates/theater-handler-assembler" }
theater-handler-rpc = { version = "0.3.11", path = "crates/theater-handler-rpc" }
theater-handler-loop = { version = "0.3.11", path = "crates/theater-handler-loop" }
theater-handler-podman = { version = "0.3.13", path = "crates/theater-handler-podman" }
# DEPRECATED: WASI handlers (moved to crates/deprecated/)
# theater-handler-environment = { version = "0.3.9", path = "crates/deprecated/theater-handler-environment" }
# theater-handler-filesystem = { version = "0.3.9", path = "crates/deprecated/theater-handler-filesystem" }
# theater-handler-http = { version = "0.3.9", path = "crates/deprecated/theater-handler-http" }
# theater-handler-http-client = { version = "0.3.9", path = "crates/deprecated/theater-handler-http-client" }
# theater-handler-http-framework = { version = "0.3.9", path = "crates/deprecated/theater-handler-http-framework" }
# theater-handler-io = { version = "0.3.9", path = "crates/deprecated/theater-handler-io" }
# theater-handler-process = { version = "0.3.9", path = "crates/deprecated/theater-handler-process" }
# theater-handler-random = { version = "0.3.9", path = "crates/deprecated/theater-handler-random" }
# theater-handler-sockets = { version = "0.3.9", path = "crates/deprecated/theater-handler-sockets" }
# theater-handler-timing = { version = "0.3.9", path = "crates/deprecated/theater-handler-timing" }

# Pack runtime integration (Graph ABI-based WASM runtime)
packr = "0.7.1"
packr-abi = "0.7.1"

# Metadata for Nix crane builds
[workspace.metadata.crane]
name = "theater"
