[package]
name = "theater-chain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
tracing.workspace = true

# WebAssembly runtime
wasmtime = { version = "31.0", features = ["component-model", "async"] }
wit-bindgen = "0.36.0"

# Additional core deps
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
toml = "0.8"
lazy_static = "1.4"
futures = "0.3"
pin-utils = "0.1"
rand = "0.8.5"
rand_chacha = "0.3"
tokio-util = { version = "0.7.13", features = ["codec"] }
bytes = "1.0"
base64 = "0.21"
sha1 = "0.10"
hex = "0.4.3"
md5 = "0.7.0"
serde = { workspace = true, features = ["derive"] }
