[package]
name = "theater-cli"
description = "Command-line interface for Theater actor system"
version.workspace = true  
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "theater"
path = "src/main.rs"

[dependencies]
# Internal dependencies
theater.workspace = true
theater-client.workspace = true
theater-server.workspace = true

# Core dependencies
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# CLI-specific dependencies
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
dialoguer = "0.11.0"
console = "0.15.7"
indicatif = "0.17.7"
ctrlc = { version = "3.4.1", features = ["termination"] }
term_size = "0.3.2"
rustyline = "13.0.0"

# Additional CLI deps
toml = "0.8"
serde_yaml = "0.9.34"
csv = "1.3.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tokio-util = { version = "0.7.13", features = ["codec"] }
bytes = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "1.0"
hex = "0.4.3"
shellexpand = "3.1.1"

# TUI dependencies
ratatui = "0.26"
crossterm = "0.27"

[dev-dependencies]
tempfile = "3.7"
