[package]
name = "theater-cli"
description = "Command-line interface for Theater actor system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[[bin]]
name = "theater"
path = "src/main.rs"

[dependencies]
# Internal dependencies
theater.workspace = true
theater-handler-runtime.workspace = true
theater-handler-store.workspace = true
theater-handler-supervisor.workspace = true
theater-handler-message-server.workspace = true

# Core dependencies
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# CLI-specific dependencies
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
dialoguer = "0.11.0"
console = "0.15.7"
indicatif = "0.17.7"
ctrlc = { version = "3.4.1", features = ["termination"] }
term_size = "0.3.2"

# Additional CLI deps
toml = "0.8"
serde_yaml = "0.9.34"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "1.0"
shellexpand = "3.1.1"
handlebars = "6.0"

[dev-dependencies]
tempfile = "3.7"
