[package]
name = "theater-handler-assembler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Core theater dependencies
theater = { path = "../theater" }

# WAT to WASM conversion
wat = "1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
test-log = "0.2"
tracing-subscriber = "0.3"
