[package]
name = "theater-handler-environment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Environment variable handler for Theater WebAssembly actors"

[dependencies]
theater = { workspace = true }
val-serde = { path = "../val-serde" }
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
serde.workspace = true
thiserror = "1.0"
tracing.workspace = true
wasmtime = { version = "31.0", features = ["component-model", "async"] }
