[package]
name = "theater-handler-http-framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "HTTP framework handler for Theater WebAssembly actors"

[dependencies]
theater = { workspace = true }
anyhow.workspace = true
chrono = "0.4"
serde = { workspace = true }
serde_json.workspace = true
thiserror = "1.0"
tracing.workspace = true
wasmtime = { version = "31.0", features = ["component-model", "async"] }
tokio = { workspace = true }
axum = { version = "0.8.1", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2.0"
futures = "0.3"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
