[package]
name = "theater-handler-replay"
version = "0.1.0"
edition = "2021"
description = "Replay handler for Theater - replays actors from recorded event chains"

[dependencies]
theater = { path = "../theater" }
anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["sync"] }
wasmtime = { version = "31.0", features = ["component-model", "async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
theater-handler-runtime = { path = "../theater-handler-runtime" }
theater-handler-io = { path = "../theater-handler-io" }
theater-handler-timing = { path = "../theater-handler-timing" }
theater-handler-filesystem = { path = "../theater-handler-filesystem" }
