[package]
name = "theater-handler-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Core theater dependencies
theater = { path = "../theater" }
val-serde = { path = "../val-serde" }

# WebAssembly runtime
wasmtime = { version = "31.0", features = ["component-model", "async"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = "0.4"

[dev-dependencies]
test-log = "0.2"
pretty_assertions = "1.4"
tempfile = "3.8.1"
# DEPRECATED: WASI handlers for tests - point to deprecated directory
theater-handler-io = { path = "../deprecated/theater-handler-io" }
theater-handler-timing = { path = "../deprecated/theater-handler-timing" }
theater-handler-filesystem = { path = "../deprecated/theater-handler-filesystem" }
tracing-subscriber = "0.3"
serde_json = "1.0"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
