[package]
name = "theater-handler-tcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

description = "Raw TCP networking handler for Theater WebAssembly runtime"

[dependencies]
theater = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
theater-handler-runtime.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
