[package]
name = "theater-handler-tcp"
version = "0.3.13"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

description = "Raw TCP networking handler for Theater WebAssembly runtime"

[dependencies]
theater = { workspace = true }
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true

# TLS support
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "0.26"

serde_json.workspace = true
