[package]
name = "theater-replay-experimenting"
version = "0.1.0"
edition = "2021"

[dependencies]
theater = { path = "../theater" }
theater-handler-runtime = { path = "../theater-handler-runtime" }
theater-handler-message-server = { path = "../theater-handler-message-server" }
theater-handler-supervisor = { path = "../theater-handler-supervisor" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
