[package]
name = "theater-replay-experimenting"
version.workspace = true
edition = "2021"

[dependencies]
theater.workspace = true
theater-handler-runtime.workspace = true
theater-handler-message-server.workspace = true
theater-handler-supervisor.workspace = true
theater-handler-tcp.workspace = true
packr = "0.4.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
