[package]
name = "theater-replay-experimenting"
version = "0.3.13"
edition = "2021"
publish = false

[dependencies]
theater.workspace = true
theater-handler-runtime.workspace = true
theater-handler-message-server.workspace = true
theater-handler-supervisor.workspace = true
theater-handler-tcp.workspace = true
packr.workspace = true
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
