[package]
name = "theater-server"
description = "HTTP server for Theater actor system management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
# Internal dependencies
theater.workspace = true

# Migrated handler dependencies
theater-handler-environment.workspace = true
theater-handler-filesystem.workspace = true
theater-handler-http.workspace = true
theater-handler-http-client.workspace = true
theater-handler-http-framework.workspace = true
theater-handler-io.workspace = true
theater-handler-message-server.workspace = true
theater-handler-process.workspace = true
theater-handler-random.workspace = true
theater-handler-runtime.workspace = true
theater-handler-store.workspace = true
theater-handler-supervisor.workspace = true
theater-handler-timing.workspace = true

# Core dependencies
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true

# Server-specific dependencies
axum = { version = "0.8.1", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "tracing"] }
warp = { version = "0.3", features = ["tls"] }

# Additional server deps
futures = "0.3"
tokio-util = { version = "0.7.13", features = ["codec"] }
bytes = "1.0"

base64 = "0.21"
